--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
 	<title>Health Food</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer></script>
-	<script src="js/script.js" defer></script>
+	<!-- <script src="/index.js" defer></script> -->
+	<script defer src="../js/bundle.js"></script>
 </head>
 
 <body>
