--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
 	<title>Health Food</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer></script>
-	<!-- <script src="/index.js" defer></script> -->
 	<script defer src="../js/bundle.js"></script>
 </head>
 
@@ -270,8 +269,8 @@
 			</div>
 			<div class="call">
 				<div class="subtitle">Или позвоните нам</div>
-				<a href="#" class="link">+380678341034</a>
-				<a href="#" class="link">+380500941356</a>
+				<a href="#" class="link">+7(967) 834 00 00</a>
+				<a href="#" class="link">+7(967) 834 00 00</a>
 			</div>
 		</div>
 	</footer>
